# ros2-devcontainer

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
scripts/: init-local.sh
src/my_cpp_py_pkg/: CMakeLists.txt  package.xml
src/my_cpp_py_pkg/cpp/: CMakeLists.txt
src/my_cpp_py_pkg/cpp/cpp_lib/: CMakeLists.txt
src/my_cpp_py_pkg/cpp/cpp_lib/include/: cpp_lib.h
src/my_cpp_py_pkg/cpp/cpp_lib/src/: cpp_lib.cpp
src/my_cpp_py_pkg/cpp/cpp_node/: CMakeLists.txt
src/my_cpp_py_pkg/cpp/cpp_node/include/: minimal_sub.hpp
src/my_cpp_py_pkg/cpp/cpp_node/src/: cpp_node.cpp
src/my_cpp_py_pkg/launch/: default.xml
src/my_cpp_py_pkg/python/: CMakeLists.txt
src/my_cpp_py_pkg/python/py_node1/: CMakeLists.txt  py_node1.py
src/my_cpp_py_pkg/python/py_node1/node1_package/: module.py
src/my_cpp_py_pkg/python/py_node2/: CMakeLists.txt  py_node2.py
src/my_cpp_py_pkg/python/py_node2/node2_package/: module.py
src/my_cpp_py_pkg/python/share/: CMakeLists.txt
src/my_cpp_py_pkg/python/share/shared_package/: minimal_pub.py
